kubernetes/apps/downloads/readarr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: readarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: readarr
      app.kubernetes.io/instance: readarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8787"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: downloads
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: downloads
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: downloads
            app.kubernetes.io/name: sabnzbd
